fixed icons on about page color on dark mode

--- a/src/components/canvas/Toolbar/Toolbar.css
+++ b/src/components/canvas/Toolbar/Toolbar.css
@@ -42,6 +42,12 @@
 
 .toolbar__icon {
   color: var(--text-primary);
+  stroke: var(--text-primary);
+}
+
+.tool__label svg {
+  color: var(--text-primary);
+  stroke: var(--text-primary);
 }
 
 .tool__divider {
