--- a/src/pages/AboutPage/AboutPage.css
+++ b/src/pages/AboutPage/AboutPage.css
@@ -210,6 +210,8 @@ p {
   width: fit-content;
   padding: 0.25rem;
   margin: 0.5rem;
+  color: var(--text-primary);
+  stroke: var(--text-primary);
 }
 
 /* Tablet */
